fix up input systems spacing and buttons

--- a/src/css/languageforge/default/lf.css
+++ b/src/css/languageforge/default/lf.css
@@ -851,10 +851,6 @@ dl#fields {
 	margin-top: 5px;
 }
 
-.indent1 {
-	padding-left: 20px;
-}
-
 .modal {
 	width: 940px;
 }
